--- a/.travis.yml
+++ b/.travis.yml
@@ -18,4 +18,4 @@ script:
   - jest --coverage
 
 after_script:
-  - ./cc-test-reporter after-build --exit-code $TRAVIS_TEST_RESULT
+  - ./cc-test-reporter after-build -t lcov --exit-code $TRAVIS_TEST_RESULT
