--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
   },
   "dependencies": {
     "react": "16.2.0",
-    "react-native": "0.53.0"
+    "react-native": "0.53.0",
+    "react-native-navigation": "^2.0.2126"
   },
   "devDependencies": {
     "@types/jest": "^22.1.2",
@@ -22,7 +23,7 @@
     "tslint": "^5.9.1",
     "tslint-config-airbnb": "^5.6.0",
     "tslint-react": "^3.5.1",
-    "typescript": "^2.7.1"
+    "typescript": "2.6.1"
   },
   "jest": {
     "preset": "react-native",
