Showing fromPage, toPage and formatting output

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -22,7 +22,8 @@
     "noUnusedParameters": true,
     "alwaysStrict": true,
     "strictFunctionTypes": true,
-    "strictNullChecks": true
+    "strictNullChecks": true,
+    "strict": true
   },
   "types": [
     "react",
