--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "test": "jest"
   },
   "dependencies": {
+    "date-fns": "^1.29.0",
     "react": "16.2.0",
     "react-native": "0.53.0",
     "react-native-navigation": "^2.0.2126"
@@ -23,7 +24,7 @@
     "tslint": "^5.9.1",
     "tslint-config-airbnb": "^5.6.0",
     "tslint-react": "^3.5.1",
-    "typescript": "2.6.1"
+    "typescript": "2.7.2"
   },
   "jest": {
     "preset": "react-native",
