--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@types/react-native": "0.52.9",
     "babel-jest": "22.2.2",
     "babel-preset-react-native": "4.0.0",
+    "fast-check": "^0.0.13",
     "jest": "22.2.2",
     "react-test-renderer": "16.2.0",
     "ts-jest": "^22.0.4",
