--- a/tsconfig.json
+++ b/tsconfig.json
@@ -23,7 +23,8 @@
     "alwaysStrict": true,
     "strictFunctionTypes": true,
     "strictNullChecks": true,
-    "strict": true
+    "strict": true,
+    "strictPropertyInitialization": true
   },
   "types": [
     "react",
