--- a/package.json
+++ b/package.json
@@ -8,13 +8,15 @@
   },
   "dependencies": {
     "date-fns": "^1.29.0",
-    "react": "16.2.0",
+    "inversify": "^4.13.0",
+    "react": "16.4.0",
     "react-native": "0.53.0",
-    "react-native-navigation": "2.0.2126"
+    "react-native-navigation": "2.0.2126",
+    "reflect-metadata": "^0.1.12"
   },
   "devDependencies": {
     "@types/jest": "^22.1.2",
-    "@types/react": "^16.0.36",
+    "@types/react": "^16.3.16",
     "@types/react-native": "0.52.9",
     "babel-jest": "22.2.2",
     "babel-preset-react-native": "4.0.0",
@@ -25,7 +27,7 @@
     "tslint": "^5.9.1",
     "tslint-config-airbnb": "^5.6.0",
     "tslint-react": "^3.5.1",
-    "typescript": "2.8.1"
+    "typescript": "2.9.1"
   },
   "jest": {
     "preset": "react-native",
