--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,15 +4,18 @@
     "module": "es2015",
     "moduleResolution": "node",
     "jsx": "react",
-    "lib": ["es2017", "dom"],
+    "lib": ["es6"],
     "outDir": "output",
     "rootDir": "src",
     "allowSyntheticDefaultImports": true,
-    "experimentalDecorators": true,
     "preserveConstEnums": true,
     "allowJs": true,
     "sourceMap": true,
     "skipLibCheck": true,
+
+    "types": ["reflect-metadata"],
+    "experimentalDecorators": true,
+    "emitDecoratorMetadata": true,
 
     "noFallthroughCasesInSwitch": true,
     "noImplicitAny": true,
@@ -36,6 +39,7 @@
     "src"
   ],
   "exclude": [
+    "node_modules",
     "output"
   ],
   "compileOnSave": false
